Fixed side gaps in navbar.

--- a/assets/less/oc.less
+++ b/assets/less/oc.less
@@ -140,8 +140,8 @@ input[type="submit"] {
 
 .navbar {
   background-color: rgb(238, 62, 110);
-
-
+  border: 0;
+  border-radius: 0;
 }
 
 .navbar-create-btn {
